Source_Code/k8s/1_Backend_externalDNSconfig.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-dns
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: external-dns
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      containers:
        - name: external-dns
          image: k8s.gcr.io/external-dns/external-dns:v0.11.0
          args:
            - --source=service
            - --source=ingress
            - --domain-filter=recipethesaurus.software      # (optional) limit to only example.com domains; change to match the zone created above.
            - --provider=azure
            - --azure-resource-group=dns_rg      # (optional) use the DNS zones from the tutorial's resource group
          volumeMounts:
            - name: azure-dns-config-file
              mountPath: /etc/kubernetes
              readOnly: true
          volumes:
            - name: azure-dns-config-file
              secret:
              secretName: azure-dns-config-file
