Source_Code/k8s/Backend_FusionAuth_App.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusionauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fusionauth
  template:
    metadata:
      labels:
        app: fusionauth
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      imagePullSecrets:
        - name: recipethesaurusregistrykey
      containers:
        - name: fusionauth
          image: recipethesaurus.azurecr.io/fusionauth-app-mysql:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 512Mi
          ports:
            - containerPort: 9011
            - containerPort: 9012
            - containerPort: 9013
          volumeMounts:
            - mountPath: "/usr/local/fusionauth/config"
              name: fusionconfig
      volumes:
        - name: fusionconfig
          persistentVolumeClaim:
            claimName: fusionconfig
---
apiVersion: v1
kind: Service
metadata:
  name: fusionauth
spec:
  ports:
    - name: http-9011
      protocol: TCP
      port: 9011
      targetPort: 9011
    - name: http-9012
      protocol: TCP
      port: 9012
      targetPort: 9013
    - name: http-9013
      protocol: TCP
      port: 9013
      targetPort: 9013
  selector:
    app: fusionauth
  type: LoadBalancer
