Source_Code/k8s/Frontend_RecipeThesaurus_app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipethesaurus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recipethesaurus
  template:
    metadata:
      labels:
        app: recipethesaurus 
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      imagePullSecrets:
        - name: recipethesaurusregistrykey
      containers:      
        - name: recipethesaurus
          image: recipethesaurus.azurecr.io/recipethesaurus-app:latest
          imagePullPolicy: Always 
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443 
              protocol: TCP
          volumeMounts:
            - name: recipethesaurus-usersecret
              mountPath: “/root/.microsoft/usersecrets/12e6ad9c-d1e3-4724-8c90-992a440391a7/secrets.json”
              readOnly: true
            - name: recipethesaurus-pfx
              mountPath: “/root/.aspnet/https/RecipeThesaurus.pfx”
              readOnly: true
      volumes:
        - name: recipethesaurus-usersecret
          secret:
            secretName: recipethesaurus-usersecret
        - name: recipethesaurus-pfx
          secret:
            secretName: recipethesaurus-pfx
              
---
apiVersion: v1
kind: Service
metadata:
  name: recipethesaurus
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443 
  selector:
    app: recipethesaurus
  type: LoadBalancer
