Source_Code/k8s/8_Backend_nginx.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fusionauth-80to9011-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: fusionauth 
      port:
        number: 9011
