Source_Code/k8s/9_Frontend_DNS_Deployment.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fusionauth
  annotations:
    kubernetes.io/ingress.class: fusionauth
spec:
  rules:
    - host: backoffice.recipethesaurus.software
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fusionauth
                port:
                  number: 1911
