Source_Code/k8s/fusionauth_backoffice_fusionauth.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fusionauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fusionauth
  template:
    metadata:
      labels:
        app: fusionauth
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      imagePullSecrets:
        - name: recipethesaurusregistrykey
      containers:
        - name: fusionauth
          image: recipethesaurus.azurecr.io/fusionauth-app-mysql:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 512Mi
          ports:
            - containerPort: 9011
            - containerPort: 9012
            - containerPort: 9013
          volumeMounts:
            - mountPath: "/usr/local/fusionauth/config"
              name: fusionconfig
      volumes:
        - name: fusionconfig
          persistentVolumeClaim:
            claimName: fusionconfig
---
apiVersion: v1
kind: Service
metadata:
  name: fusionauth
spec:
  type: LoadBalancer
  ports:
    - port: 9011
      name: http
  selector:
    app: fusionauth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fusionauth
  annotations:
    kubernetes.io/ingress.class: fusionauth
spec:
  rules:
    - host: fusionauth.recipethesaurus.software
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fusionauth
                port:
                  number: 1911
